Fixed post title alignments, added nodemon, and app link to the terminal for easy access

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,3 +58,11 @@ h3 {
   font-size: 60px;
   cursor: pointer;
 }
+
+.custom-post-title-home {
+  text-align: left;
+}
+
+.custom-post-title-post {
+  text-align: center;
+}
